# site_via_django

./: pyproject.toml
quotes/quotes/: settings.py  urls.py
quotes/quotesapp/: forms.py  models.py  signals.py  urls.py  views.py
quotes/quotesapp/migrations/: 0001_initial.py  0002_delete_user.py  0003_author_user_quote_user.py  0004_alter_tag_name.py
quotes/quotesapp/static/quotesapp/: style.css
quotes/quotesapp/templates/quotesapp/: author.html  author_detail.html  base.html  data_load.html  index.html  quote.html  quotes_by_tag.html
quotes/quotesapp/templatetags/: extra_tags.py
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/users/: login.html  password_reset.html  password_reset_confirm.html  signup.html
quotes/utils/: scrap_and_load.py
