[tool.poetry]
name = "site-via-django"
version = "0.1.0"
description = ""
authors = ["KondratovaLudmila <137877876+KondratovaLudmila@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
psycopg2 = "^2.9.9"
scrapy = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
